# py-tetris

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: main.py
src/tetris/: __main__.py  grid.py  piece.py  simulator.py
src/tetris_engine/: grid.py  piece.py  tetris.py
tests/: test_tetris.py
